@@ -6,6 +6,12 @@
 2011-08-15	pwessel
 	GMT 5.0.0b finalized and released.
 -----------------------------------------------------------------------------------------
+2011-08-02	pwessel
+	* gmt_fft.c:		Started groundwork to enable FFTW, Accelerate framework,
+				Sun Performance library, and FFT Pack configurations.
+	* gmt.conf:		New parameter GMT_FFT which selects what FFT implementation
+				to use in programs like spectrum1d and grdfft.
+
 2011-07-28	pwessel
 	* gmt_support.c:	Pens like brown,- (i.e., no width) did not set the color.
 
